# SeaMonkey

./: README.md  pyproject.toml  seamonkeydata.txt
scripts/: plotthemonkey.py  run.py
seamonkey/: __init__.py  settings.py  tank.py
